# AI_DriveThru_IK

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  tortoise_config.py
backend/app/api/: categories_controller.py  customer_controller.py  file_upload_controller.py  ingredients_controller.py  menu_items_controller.py  orders_controller.py  restaurants_controller.py  sessions_controller.py  voice_controller.py
backend/app/config/: settings.py
backend/app/constants/: __init__.py  audio_phrases.py  intent_types.py  item_sizes.py  modifier_actions.py  order_config.py
backend/app/core/: container.py  database.py
backend/app/di/: container.py
backend/app/dto/: __init__.py  category_dto.py  conversation_dto.py  ingredient_dto.py  menu_item_dto.py  menu_search_dto.py  modify_item_dto.py  order_dto.py  order_item_dto.py  restaurant_dto.py  user_dto.py
backend/app/models/: __init__.py  category.py  ingredient.py  menu_item.py  menu_item_ingredient.py  order.py  order_item.py  restaurant.py  user.py
backend/app/services/: category_service.py  context_service.py  ingredient_service.py  menu_cache_service.py  menu_item_service.py  menu_resolution_service.py  menu_service.py  modify_item_service.py  order_item_service.py  order_service.py  order_session_service.py  restaurant_service.py  (+4 more)
backend/docs/: BUG_TRACKING.md  FUTURE_IMPROVEMENTS.md  QA_TESTING.md
backend/imports/: import_excel_prepared_data.json
backend/scripts/: clear_database.py  clear_voice_cache.py  import_menu_data.py  view_performance_logs.py
(+164 files in other folders)
